fix: minor style updates to button alignment and fonts

--- a/views/assets/styles/_forms.scss
+++ b/views/assets/styles/_forms.scss
@@ -341,10 +341,6 @@
 		}
 	}
 
-	button.button-blue {
-		margin-left: 10px;
-	}
-
 	.small-input {
 		width: 130px;
 	}
